--- a/src/app/modules/emergente-info-cliente/emergente-info-cliente.component.html
+++ b/src/app/modules/emergente-info-cliente/emergente-info-cliente.component.html
@@ -1,18 +1,34 @@
 <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
-<h1 mat-dialog-title class="title">Confirmación</h1>
+<h1 mat-dialog-title class="title">INFORMACIÓN DEL CLIENTE</h1>
 <div mat-dialog-content>
 <div class="row">
   <div class="col-sm-5">
     <img [src]="photo" class="size_image" alt="Imagen del Cliente no disponible" style="width: 90%;">
-    <div *ngIf="huella !== null">
-      <img src="https://olympus.arvispace.com/gimnasioRoles/assets/img/huella.png"/>
-    </div>    
+   
   </div>
   <div class="col-sm-7">
     <form [formGroup]="form">
     <div class="row">
-      <label>INFORMACIÓN DEL CLIENTE</label>
-     
+
+      <div *ngIf="huella !== null && huella !== 'null' && huella !== '0'; else noHuella">
+        <!-- Contenido para cuando huella no es nula ni 'null' y tampoco es cero -->
+        <img src="https://olympus.arvispace.com/gimnasioRoles/assets/img/huella.png" style="width: 8%;"/>
+        <label style="background-color: rgb(0, 155, 0); color: white; padding: 5px;">
+          
+          Huella registrada
+        </label>
+        <hr>
+      </div>
+
+      <ng-template #noHuella>
+        <!-- Contenido para cuando huella es nula, 'null' o cero -->
+        <div style="width: 100%;">
+          <label style="background-color: rgb(177, 0, 0); color: white; padding: 5px;">Huella no registrada</label>
+          <hr>
+        </div>
+      </ng-template>
+      
+    
       <div class="col-sm-6">
         <mat-form-field appearance="outline" class="formInputs" style="width: 90%;">
           <mat-label>Nombre:</mat-label>
