--- a/src/app/modules/home/home.component.css
+++ b/src/app/modules/home/home.component.css
@@ -92,6 +92,7 @@
     padding: 8px; /* Espaciado interno de las celdas */
     text-align: left; /* Alineación del texto */
   
+  
   }
   
 
@@ -100,3 +101,28 @@
     background-color: #FFFFFF; 
 
   }
+
+
+ /* Estilos para la tabla */
+.mi-tabla {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+/* Estilos para las celdas de la tabla */
+.mi-tabla td, .mi-tabla th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+/* Estilos para las cabeceras de la tabla */
+.mi-tabla th {
+  background-color: #f2f2f2;
+}
+
+/* Estilos alternos para filas */
+.mi-tabla tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
