--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,217 +1,95 @@
 <div style="margin-top: 60px;">
-<mat-card *ngIf="isAdmin() || isRecep()">
-  <mat-card-content>
-    <div class="dashboard-cards">
-      <mat-card class="orange-card" *ngFor="let card of homeCard">
-        <mat-card-header>
-          <mat-card-title>{{card.titulo}}</mat-card-title>
-          <!--<mat-card-title>VENTAS DEL DIA - {{ fechaActual | date:'yyyy-MM-dd' }}</mat-card-title>-->
-        </mat-card-header>
-        <mat-card-content>
-          <br>
-          <div class="row">
-          <div class="col-sm-5">
-              <img src="https://olympus.arvispace.com/gimnasioRoles/assets/img/{{card.icono}}" alt="icnono" class="card-image">
-            </div>
-            <div class="col-sm-7">
-            <br>
-              <p style="color: rgb(0, 0, 0); font-size: 45px; font-family:Verdana, Geneva, Tahoma, sans-serif; ">{{ card.cantidad }}</p>
-            </div>
+  <mat-card *ngIf="isAdmin() || isRecep()">
+      <mat-card-content>
+          <div class="dashboard-cards">
+              <mat-card class="orange-card" *ngFor="let card of homeCard">
+                  <mat-card-header>
+                      <mat-card-title>{{card.titulo}}</mat-card-title>
+                      <!--<mat-card-title>VENTAS DEL DIA - {{ fechaActual | date:'yyyy-MM-dd' }}</mat-card-title>-->
+                  </mat-card-header>
+                  <mat-card-content>
+                      <br>
+                      <div class="row">
+                          <div class="col-sm-5">
+                              <img src="https://olympus.arvispace.com/gimnasioRoles/assets/img/{{card.icono}}" alt="icnono" class="card-image">
+                          </div>
+                          <div class="col-sm-7">
+                              <br>
+                              <p style="color: rgb(0, 0, 0); font-size: 45px; font-family:Verdana, Geneva, Tahoma, sans-serif; ">{{ card.cantidad }}</p>
+                          </div>
+                      </div>
+                  </mat-card-content>
+              </mat-card>
           </div>
-        </mat-card-content>
-      </mat-card>
-    </div>
-  </mat-card-content>
-</mat-card>
- 
+      </mat-card-content>
+  </mat-card>
 
-
-<mat-card *ngIf="isAdmin() || isRecep()">
-  <mat-card-content>
-    <div class="dashboard-cardss">
-      
-      <!--<mat-card class="ancho-1">
-        <mat-card-header>
-          <h3 class="icon-title">
-            <mat-icon class="icon">grid_view</mat-icon>
-            PRODUCTOS MÁS VENDIDOS
-          </h3>
-        </mat-card-header>
-        <mat-card-content>
-          <p style="border-top: 2px solid orange;"></p>
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Producto</th>
-                <th>Total Ventas</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let producto of datosProductosVendidos">
-                <td>{{ producto.nombreProducto }}</td>
-                <td>{{ producto.totalVentas }}</td>
-              </tr>
-            </tbody>
-          </table>
-        </mat-card-content>
-      </mat-card>-->
-      <mat-card *ngIf="isAdmin() || isRecep()">
-        <mat-card-content>
+  <mat-card *ngIf="isAdmin() || isRecep()">
+      <mat-card-content>
           <div class="dashboard-cardss">
-            <mat-card class="ancho-1">
-              <mat-card-header>
-                <h3 class="icon-title">
-                  <mat-icon class="icon">grid_view</mat-icon>
-                  PRODUCTOS MÁS VENDIDOS
-                </h3>
-              </mat-card-header>
-              <mat-card-content>
-                <p style="border-top: 2px solid orange;"></p>
-                <div *ngIf="tablaHTML" [innerHTML]="tablaHTML"></div>
-              </mat-card-content>
-            </mat-card>
+              <mat-card>
+                  <mat-card-content>
+                      <div class="dashboard-cardss" *ngIf="isAdmin() || isRecep()">
+                          <mat-card class="ancho-1">
+                              <mat-card-header>
+                                  <h3 class="icon-title">
+                <mat-icon class="icon">grid_view</mat-icon>
+                PRODUCTOS MÁS VENDIDOS
+              </h3>
+                              </mat-card-header>
+                              <mat-card-content>
+                                  <p style="border-top: 2px solid orange;"></p>
+                                  <div *ngIf="tablaHTML" [innerHTML]="tablaHTML "></div>
 
+                              </mat-card-content>
+                          </mat-card>
 
-      <mat-card class="ancho-2">
-        <mat-card-header>
-          <h3 class="icon-title">
-            <mat-icon class="icon">grid_view</mat-icon>
-            ÚLTIMAS VENTAS
-          </h3>
-        </mat-card-header>
-        <mat-card-content>
-          <p style="border-top: 2px solid orange;"></p>
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Producto</th>
-                <th>Fecha</th>
-                <th>Venta total</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let venta of datosRecientesVentas">
-                <td>{{ venta.nombreProducto }}</td>
-                <td>{{ venta.fechaVenta }}</td>
-                <td>{{ venta.precioUnitario * venta.cantidadElegida}}</td>
-              </tr>
-            </tbody>
-          </table>
-        </mat-card-content>
-      </mat-card>
-    </div>
-  </mat-card-content>
-</mat-card>
+                          <mat-card class="ancho-2">
+                              <mat-card-header>
+                                  <h3 class="icon-title">
+                <mat-icon class="icon">grid_view</mat-icon>
+                ÚLTIMAS VENTAS
+              </h3>
+                              </mat-card-header>
+                              <mat-card-content>
+                                  <p style="border-top: 2px solid orange;"></p>
+                                  <div *ngIf="tablaHTMLVentas" [innerHTML]="tablaHTMLVentas"></div>
 
-<!--<mat-card *ngIf="isAdmin() || isRecep()">
-  <mat-card-content>
-    <div class="dashboard-cardss">
-      <mat-card class="ancho-1">
-        <mat-card-header>
-          <h3 class="icon-title">
-            <mat-icon class="icon">grid_view</mat-icon>
-            PRODUCTOS MÁS VENDIDOS
-          </h3>
-        </mat-card-header>
-        <mat-card-content>
-          <p style="border-top: 2px solid orange;"></p>
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Producto</th>
-                <th>Total Ventas</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let producto of datosProductosVendidos">
-                <td>{{ producto.nombreProducto }}</td>
-                <td>{{ producto.totalVentas }}</td>
-              </tr>
-            </tbody>
-          </table>
-        </mat-card-content>
-      </mat-card>-->
+                              </mat-card-content>
+                          </mat-card>
 
-     
+                      </div>
+                  </mat-card-content>
+              </mat-card>
 
- <!-- dashboard.component.html 
-<mat-card *ngIf="isAdmin()">
-   <mat-card-content>
-     <div class="dashboard-cardss">
- 
-       <mat-card class="half-width-card" routerLink="../misMembresias">
-         <mat-card-header>
-           <mat-card-title>Administra tus membresias aquí</mat-card-title>
-         </mat-card-header>
-         <mat-card-content>
-            <img src="../../../../../assets/img/mem.png" alt="Imagen Azul Marino" class="card-imagenesU">
-         </mat-card-content>
-       </mat-card>
- 
-    
-       <mat-card class="quarter-width-card" routerLink="../productos">
-         <mat-card-header>
-           <mat-card-title>Administra tus productos aquí</mat-card-title>
-         </mat-card-header>
-         <mat-card-content>
-            <img src="../../../../../assets/img/productos.png" alt="Imagen Azul Marino" class="card-imagenesD"> 
-         </mat-card-content>
-       </mat-card>
- 
+              <!--<div class="row">
 
-       <mat-card class="quarter-width-card" routerLink="../listaMembresias">
-         <mat-card-header>
-           <mat-card-title>Administra tus socios aquí</mat-card-title>
-         </mat-card-header>
-         <mat-card-content>
-            <img src="../../../../../assets/img/socios.png" alt="Imagen Blanca" class="card-imagenesT">
-            
-         </mat-card-content>
-       </mat-card>
-     </div>
-   </mat-card-content>
- </mat-card>
--->
-
-
-    
-     <!--<div class="row">
-  
-        <div class="col-sm-9">
-          <mat-card *ngIf="isSupadmin()" class="sup-card" routerLink="../listaSucursales" >
-            <mat-card-header>
-            </mat-card-header>
-            <mat-card-content>
-              <div class="row">
-                <div class="col-sm-2">
-                  <img src="../../../../../assets/img/sucursal.png" alt="Imagen Azul Marino" class="card-imagenesU">
-                </div>
-                <div class="col-sm-10">
-                  <P style="font-size: 20px;">BIENVENIDO SUPER ADMINISTRADOR</P>
-                  <P style="font-size: 17px;">Puedes administrar las sucursales desde aquí</P>
-                  <div style="display: flex; justify-content: flex-end; align-items: center;">
-                    <button mat-button style="background-color: #fd9727; border: 0px; width: 30%;height: 35px;">
-                     CONSULTA AQUÍ
-                    </button>
-                  </div>
+      <div class="col-sm-9">
+        <mat-card *ngIf="isSupadmin()" class="sup-card" routerLink="../listaSucursales" >
+          <mat-card-header>
+          </mat-card-header>
+          <mat-card-content>
+            <div class="row">
+              <div class="col-sm-2">
+                <img src="../../../../../assets/img/sucursal.png" alt="Imagen Azul Marino" class="card-imagenesU">
+              </div>
+              <div class="col-sm-10">
+                <P style="font-size: 20px;">BIENVENIDO SUPER ADMINISTRADOR</P>
+                <P style="font-size: 17px;">Puedes administrar las sucursales desde aquí</P>
+                <div style="display: flex; justify-content: flex-end; align-items: center;">
+                  <button mat-button style="background-color: #fd9727; border: 0px; width: 30%;height: 35px;">
+                   CONSULTA AQUÍ
+                  </button>
                 </div>
               </div>
-            </mat-card-content>
-          </mat-card> 
-        </div>
-      
- 
-        <div class="col-sm3">
-          <mat-card *ngIf="isSupadmin()" class="sup-card" routerLink="../otraRuta">
-         
-          </mat-card>
-        </div>
-      </div>--> 
-      
+            </div>
+          </mat-card-content>
+        </mat-card> 
+      </div>
+      <div class="col-sm3">
+        <mat-card *ngIf="isSupadmin()" class="sup-card" routerLink="../otraRuta">
+       
+        </mat-card>
+      </div>
+    </div>-->
 </div>
-
-
-<!-- tu-componente.component.html -->
-
-<!-- tu-componente.component.html -->
-
