--- a/src/app/modules/home/home.component.css
+++ b/src/app/modules/home/home.component.css
@@ -112,7 +112,7 @@
 
 /* Estilos para las celdas de la tabla */
 .mi-tabla td, .mi-tabla th {
-  border: 1px solid #dddddd;
+  border: 1px solid #b40808;
   text-align: left;
   padding: 8px;
 }
@@ -125,4 +125,10 @@
 /* Estilos alternos para filas */
 .mi-tabla tr:nth-child(even) {
   background-color: #f9f9f9;
+}
+
+.mi-tabla-container {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-top: 10px;
 }
