se agrega spinner y se ejecuta nueva version de la aplicacion para capturar huellas

--- a/src/app/modules/sidebar/sidebar.component.css
+++ b/src/app/modules/sidebar/sidebar.component.css
@@ -86,4 +86,8 @@
   .transparent-button:hover {
     /* Estilos adicionales al pasar el mouse sobre el botón, si es necesario */
   }
+
+  .mat-sidenav a {
+    text-decoration: none;
+  }
   
