--- a/src/app/modules/sidebar/sidebar.component.html
+++ b/src/app/modules/sidebar/sidebar.component.html
@@ -81,10 +81,13 @@
             Registro 
         </button>
 
+        <a href="{{url}}">
         <button *ngIf="isAdmin() || isRecep()" (click)="abrirAcceso()" class="hover-orange transparent-button"> 
             <mat-icon>person</mat-icon> 
             Acceso manual
+            <!--<a href="{{url}}"></a>-->
         </button>
+        </a>
         
         <button (click)="logoutBS()" class="hover-orange transparent-button">  
             <mat-icon>power_settings_new</mat-icon> 
