apertura manual correcta

--- a/src/app/modules/sidebar/sidebar.component.html
+++ b/src/app/modules/sidebar/sidebar.component.html
@@ -93,6 +93,10 @@
             <mat-icon>power_settings_new</mat-icon> 
             Cerrar sesión 
         </button>
+
+        <!--<button (click)="openSerialPage()">
+            PruebaSerial
+        </button> -->
     </mat-nav-list>
     
     </mat-sidenav>
