--- a/src/app/modules/emergente-apertura-puerto-serial/emergente-apertura-puerto-serial.component.html
+++ b/src/app/modules/emergente-apertura-puerto-serial/emergente-apertura-puerto-serial.component.html
@@ -2,6 +2,30 @@
 <div mat-dialog-content>
 
     <!-- Contenido - body capturar huella -->
+    <div>
+    <div class="card-body content_profile_img">
+        <div class="alert alert-light contentBtns" role="alert">
+            <button mat-button *ngIf="!selectedPort" class="btn btn-danger" (click)="eventoX()">Selecciona
+                puerto.</button>
+            <button mat-button *ngIf="selectedPort" class="btn btn-info" (click)="enviarDatosPorPuertoSerial()">Dar
+                acceso manual.</button>
+        </div>
+    </div>
+</div>
+</div>
+<!--</div>-->
+<div mat-dialog-actions fxLayoutAlign="center center">
+    <button class="button-pay" mat-button (click)="cerrarDialogo()">Cerrar</button>
+</div>
+
+<h1 mat-dialog-title>Acceso manual.</h1>
+<div mat-dialog-content>
+
+
+
+    
+    <!-- Contenido - body capturar huella -->
+    <!--
     <div *ngFor="let mb of membresiaHisto">
     <div *ngIf="mb.Status === 'Activo'" class="card-body content_profile_img">
         <div class="alert alert-light contentBtns" role="alert">
@@ -19,7 +43,6 @@
     </div>
 </div>
 </div>
-<!--</div>-->
 <div mat-dialog-actions fxLayoutAlign="center center">
     <button class="button-pay" mat-button (click)="cerrarDialogo()">Cerrar</button>
-</div>
+</div>-->
