modificaciones por el id

--- a/src/app/modules/alta-categoria/alta-categoria.component.html
+++ b/src/app/modules/alta-categoria/alta-categoria.component.html
@@ -21,7 +21,7 @@
                          <p>
                             <mat-form-field appearance="outline"  style="width: 100%;" required>
                                <mat-label>Nombre</mat-label>
-                               <input type="text" matInput placeholder="Bebidas" autocomplete="off" id="nombre" formControlName="nombre">
+                               <input type="text" matInput placeholder="Bebidas" autocomplete="off" id="nombreCategoria" formControlName="nombreCategoria">
                                
                             </mat-form-field>
                          </p>
