--- a/src/app/modules/colaboradores/colaboradores.component.html
+++ b/src/app/modules/colaboradores/colaboradores.component.html
@@ -25,11 +25,6 @@
           <td mat-cell *matCellDef="let empleado"> {{ empleado.turnoLaboral }} </td>
         </ng-container>
       
-        <ng-container matColumnDef="sucursal">
-          <th mat-header-cell *matHeaderCellDef> Sucursal </th>
-          <td mat-cell *matCellDef="let empleado"> {{ empleado.nombreGym }} </td>
-        </ng-container>
-      
         <ng-container matColumnDef="email">
           <th mat-header-cell *matHeaderCellDef> Email </th>
           <td mat-cell *matCellDef="let empleado"> {{ empleado.email }} </td>
@@ -49,8 +44,8 @@
           </td>
         </ng-container>
       
-        <tr mat-header-row *matHeaderRowDef="['nombre', 'turno', 'sucursal', 'email', 'telefono', 'acciones']"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['nombre', 'turno', 'sucursal', 'email', 'telefono', 'acciones'];"></tr>
+        <tr mat-header-row *matHeaderRowDef="['nombre', 'turno', 'email', 'telefono', 'acciones']"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['nombre', 'turno', 'email', 'telefono', 'acciones'];"></tr>
       </table>
       
       </div>
