--- a/src/app/modules/horarios-vista/horarios-vista.component.html
+++ b/src/app/modules/horarios-vista/horarios-vista.component.html
@@ -40,20 +40,20 @@
               <label for="nombreColonia" class="large-text" >Nombre de la sucursal:</label>
                 <mat-form-field appearance="outline"  style="width: 95%;" required>
                   <mat-label>Nombre</mat-label>
-                  <input type="text" matInput placeholder="Nombre sucursal" autocomplete="off" id="nombreGym" formControlName="nombreGym" />
-                  <mat-error *ngIf="formularioSucursales.get('nombreGym')?.hasError('required')"><strong class="txt_msg">**Campo requerido</strong></mat-error>
+                  <input type="text" matInput placeholder="Nombre sucursal" autocomplete="off" id="nombreBodega" formControlName="nombreBodega" />
+                  <mat-error *ngIf="formularioSucursales.get('nombreBodega')?.hasError('required')"><strong class="txt_msg">**Campo requerido</strong></mat-error>
                 </mat-form-field>
                
             </div>
             <div class="col-sm-6">
-              <label for="telefono" class="large-text" >Telefono:</label>
+              <label for="numeroTelefonico" class="large-text" >Telefono:</label>
                 <mat-form-field appearance="outline" style="width: 95%;" required>
                   <mat-label>Telefono</mat-label>
-                  <input type="text" placeholder="telefono"minlength="7" maxlength="10"  matInput autocomplete="off" id="telefono" formControlName="telefono" [errorStateMatcher]="matcher" />
-                  <mat-error *ngIf="formularioSucursales.get('telefono')?.hasError('pattern') && !formularioSucursales.get('telefono')?.hasError('required')">
+                  <input type="text" placeholder="telefono" minlength="7" maxlength="10"  matInput autocomplete="off" id="numeroTelefonico" formControlName="numeroTelefonico" [errorStateMatcher]="matcher" />
+                  <mat-error *ngIf="formularioSucursales.get('numeroTelefonico')?.hasError('pattern') && !formularioSucursales.get('numeroTelefonico')?.hasError('required')">
                     <strong class="txt_msg">**Formato no valido, (solo números)...</strong>
                 </mat-error>
-                <mat-error *ngIf="formularioSucursales.get('telefono')?.hasError('required')"><strong class="txt_msg">**Campo requerido</strong></mat-error>
+                <mat-error *ngIf="formularioSucursales.get('numeroTelefonico')?.hasError('required')"><strong class="txt_msg">**Campo requerido</strong></mat-error>
                 </mat-form-field>
             </div>
           </div>
@@ -217,8 +217,6 @@
         Agrega datos del administrador
       </div>
       <br>
-
-
       <form [formGroup]="personaForm" class="example-form" *ngIf="optionToShow === 2 && mostrarFormularioAdministrador">
         <div class="row">
           <div class="col-sm-6">
@@ -314,7 +312,7 @@
     <div style="margin: auto; display: block; text-align: center;" mat-dialog-actions>
       <!--<button *ngIf="optionToShow === 2" mat-raised-button type="submit" (click)="enviarFormularios()" (click)="enviarMensajeWhatsApp()" style="background-color: #fd9727; font-size: 20px; margin-top: 50px; height: 40px; width: 120px;">Aceptar</button>-->   <!--(click)="enviarFormularios()" -->
       <button *ngIf="optionToShow === 2 && !mostrarFormularioAdministrador" (click)="enviarSucursal()" mat-raised-button type="submit" style="background-color: #fd9727; font-size: 20px;height: 40px; width: 120px;">Aceptar</button>   <!--(click)="enviarSucursal()"" sera el envio de sucursal-->
-      <button *ngIf="optionToShow === 2 && mostrarFormularioAdministrador && personaForm.valid" (click)="enviarEmpleado(); enviarMensajeWhatsApp()" mat-raised-button type="submit" style="background-color: #fd9727; font-size: 20px;  height: 40px; width: 120px;">Aceptar</button>   <!--(click)="enviarEmpleado()" (click)="enviarMensajeWhatsApp()"" serael envio del empleado y del whatsapp-->
+      <button *ngIf="optionToShow === 2 && mostrarFormularioAdministrador " (click)="enviarEmpleado(); enviarMensajeWhatsApp()" mat-raised-button type="submit" style="background-color: #fd9727; font-size: 20px;  height: 40px; width: 120px;">Aceptar</button>   <!--(click)="enviarEmpleado()" (click)="enviarMensajeWhatsApp()"" serael envio del empleado y del whatsapp-->
       <button *ngIf="optionToShow === 3" mat-raised-button type="submit" (click)="confirmarEdicion()" style="background-color: #fd9727; font-size: 20px;  height: 40px; width: 120px;">Aceptar</button>
   
       <button mat-raised-button type="submit" (click)="cancelar()"  style="background-color: #000000; font-size: 20px; margin-left: 50px;  height: 40px; width: 120px;color: white;">Cancelar</button>
