se oculta dialogo de accesos, se abre app nativa java

--- a/src/app/modules/sidebar/sidebar.component.html
+++ b/src/app/modules/sidebar/sidebar.component.html
@@ -82,7 +82,7 @@
         </button>
 
         <a href="{{url}}">
-        <button *ngIf="isAdmin() || isRecep()" (click)="abrirAcceso()" class="hover-orange transparent-button"> 
+        <button *ngIf="isAdmin() || isRecep()"  class="hover-orange transparent-button"> 
             <mat-icon>person</mat-icon> 
             Acceso manual
             <!--<a href="{{url}}"></a>-->
